--- a/consumer/src/pages/popup/popup.html
+++ b/consumer/src/pages/popup/popup.html
@@ -12,7 +12,7 @@
   <body class="h-full w-full bg-white text-xs">
     <div class="text-sm w-[330px]">
       <header class="p-3 flex items-center">
-        <h1 class="text-base text-zinc-400 font-semibold text-center flex-1">
+        <h1 id='title' class="text-base text-zinc-400 font-semibold text-center flex-1">
           Player
         </h1>
         <button
@@ -36,13 +36,13 @@
               id="thumbnail-container w-full h-full relative object-cover rounded-lg"
             >
               <img
-                src="../../assets/ginger-asmr-thumbnail.webp"
-                class="absolute inset-0 h-full rounded-lg"
+                src="https://images.unsplash.com/photo-1618005198919-d3d4b5a92ead?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3774&q=80"
+                class="absolute inset-0 h-full rounded-lg w-full object-cover"
                 alt=""
               />
             </div>
             <div
-              class="absolute flex justify-center items-center inset-0 rounded-lg bg-premium-dark opacity-50"
+              class="absolute flex justify-center items-center inset-0 rounded-lg"
             >
               <!--              <div class='absolute inset-0  rounded-lg'></div>-->
               <!--              <div class="flex flex-col text-center">-->
@@ -58,7 +58,7 @@
           <div class="space-y-2.5">
             <div class="w-full bg-zinc-200 h-1">
               <div
-                class="h-1 w-5/12 bg-gradient-to-r from-indigo-500 via-purple-500 to-brand-500"
+                class="h-1 animate-grow bg-gradient-to-r from-violet-500 via-purple-500 to-brand-500"
               ></div>
             </div>
             <div class="flex justify-between">
@@ -66,62 +66,14 @@
               ><span class="text-zinc-400">02:15</span>
             </div>
           </div>
-          <div class="mt-2 w-full flex justify-center items-center space-x-4">
-            <span
-              class="inline-flex justify-center items-center h-10 w-10 rounded-full bg-zinc-200 group cursor-pointer"
+          <div class='flex justify-center items-center w-full'>
+            <button
+              id='trigger'
+              type='button'
+              class='inline-flex items-center rounded-full border border-transparent bg-violet-600 px-6 py-3 text-base font-medium text-white shadow-sm hover:bg-violet-700 focus:outline-none focus:ring-2 focus:ring-violet-500 focus:ring-offset-2'
             >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="w-4 h-4 text-zinc-400 group-hover:text-zinc-600"
-              >
-                <path
-                  fill="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M21 16.811c0 .864-.933 1.405-1.683.977l-7.108-4.062a1.125 1.125 0 010-1.953l7.108-4.062A1.125 1.125 0 0121 8.688v8.123zM11.25 16.811c0 .864-.933 1.405-1.683.977l-7.108-4.062a1.125 1.125 0 010-1.953L9.567 7.71a1.125 1.125 0 011.683.977v8.123z"
-                />
-              </svg> </span
-            ><span
-              class="inline-flex justify-center items-center h-16 w-16 rounded-full bg-teen-party cursor-pointer"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="w-6 h-6 text-white"
-              >
-                <path
-                  fill="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
-                />
-              </svg> </span
-            ><span
-              class="inline-flex justify-center items-center h-10 w-10 rounded-full bg-zinc-200 group cursor-pointer"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="w-4 h-4 text-zinc-400 group-hover:text-zinc-600"
-              >
-                <path
-                  fill="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M3 8.688c0-.864.933-1.405 1.683-.977l7.108 4.062a1.125 1.125 0 010 1.953l-7.108 4.062A1.125 1.125 0 013 16.81V8.688zM12.75 8.688c0-.864.933-1.405 1.683-.977l7.108 4.062a1.125 1.125 0 010 1.953l-7.108 4.062a1.125 1.125 0 01-1.683-.977V8.688z"
-                />
-              </svg>
-            </span>
+              Get Video ID
+            </button>
           </div>
           <div class="relative flex items-center space-x-3 mt-7 w-full">
             <button
