fix(getCurrentTab): correct issue with lastFocusedWindow query option

--- a/consumer/src/pages/popup/popup.html
+++ b/consumer/src/pages/popup/popup.html
@@ -12,7 +12,7 @@
   <body class="h-full w-full bg-white text-xs">
     <div class="text-sm w-[330px]">
       <header class="p-3 flex items-center">
-        <h1 id='title' class="text-base text-zinc-400 font-semibold text-center flex-1">
+        <h1 id='title' class="text-sm text-zinc-400 font-semibold text-center flex-1">
           Player
         </h1>
         <button
